--- a/index.html
+++ b/index.html
@@ -8,187 +8,168 @@
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="./vendors/css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
-    <title>Day Planner | Mehdi Mehrabani</title>
+    <title>Work Day Scheduler</title>
   </head>
   <body>
-    <!-- --------------------------------------------------------------- -->
+    <!------------------------------------------------------------------->
     <!-- HEADER -->
-    <!-- --------------------------------------------------------------- -->
+    <!------------------------------------------------------------------->
     <header class="header">
-      <h1>Day Planner</h1>
+      <h1>Work Day Scheduler</h1>
       <h2></h2>
     </header>
     <main class="master-container">
-      <!-- --------------------------------------------------------------- -->
+      <!------------------------------------------------------------------->
       <!-- 9am -->
-      <div class="main-container">
+      <article class="main-container">
         <section class="main-side-container">
           <label for="text-area">9 am</label>
         </section>
-        <!-- TEXTAREA CONTAINER -->
+
         <section class="main-text-container">
           <textarea type="text" class="text-area"></textarea>
         </section>
 
-        <!-- SAVE CONTAINER -->
         <section class="main-side-container">
           <button class="item-save"><ion-icon name="save-outline" class="icon-big"></ion-icon></button>
         </section>
-      </div>
-      <!-- --------------------------------------------------------------- -->
-      <!-- --------------------------------------------------------------- -->
+      </article>
+      <!------------------------------------------------------------------->
+      <!------------------------------------------------------------------->
       <!-- 10am -->
-      <div class="main-container">
+      <article class="main-container">
         <section class="main-side-container">
           <label for="text-area">10 am</label>
         </section>
-        <!-- TEXTAREA CONTAINER -->
+
         <section class="main-text-container">
           <textarea type="text" class="text-area"></textarea>
         </section>
 
-        <!-- SAVE CONTAINER -->
         <section class="main-side-container">
           <button class="item-save"><ion-icon name="save-outline" class="icon-big"></ion-icon></button>
         </section>
-      </div>
-      <!-- --------------------------------------------------------------- -->
-      <!-- --------------------------------------------------------------- -->
+      </article>
+      <!------------------------------------------------------------------->
+      <!------------------------------------------------------------------->
       <!-- 11am -->
-      <div class="main-container">
+      <article class="main-container">
         <section class="main-side-container">
           <label for="text-area">11 am</label>
         </section>
-        <!-- TEXTAREA CONTAINER -->
+
         <section class="main-text-container">
           <textarea type="text" class="text-area"></textarea>
         </section>
 
-        <!-- SAVE CONTAINER -->
         <section class="main-side-container">
           <button class="item-save"><ion-icon name="save-outline" class="icon-big"></ion-icon></button>
         </section>
-      </div>
-      <!-- --------------------------------------------------------------- -->
-      <!-- --------------------------------------------------------------- -->
+      </article>
+      <!------------------------------------------------------------------->
+      <!------------------------------------------------------------------->
       <!-- 12pm -->
-      <div class="main-container">
+      <article class="main-container">
         <section class="main-side-container">
           <label for="text-area">12 pm</label>
         </section>
-        <!-- TEXTAREA CONTAINER -->
+
         <section class="main-text-container">
           <textarea type="text" class="text-area"></textarea>
         </section>
 
-        <!-- SAVE CONTAINER -->
         <section class="main-side-container">
           <button class="item-save"><ion-icon name="save-outline" class="icon-big"></ion-icon></button>
         </section>
-      </div>
-      <!-- --------------------------------------------------------------- -->
-      <!-- --------------------------------------------------------------- -->
+      </article>
+      <!------------------------------------------------------------------->
+      <!------------------------------------------------------------------->
       <!-- 1pm -->
-      <div class="main-container">
+      <article class="main-container">
         <section class="main-side-container">
           <label for="text-area">1 pm</label>
         </section>
-        <!-- TEXTAREA CONTAINER -->
+
         <section class="main-text-container">
           <textarea type="text" class="text-area"></textarea>
         </section>
 
-        <!-- SAVE CONTAINER -->
         <section class="main-side-container">
           <button class="item-save"><ion-icon name="save-outline" class="icon-big"></ion-icon></button>
         </section>
-      </div>
-      <!-- --------------------------------------------------------------- -->
-      <!-- --------------------------------------------------------------- -->
+      </article>
+      <!------------------------------------------------------------------->
+      <!------------------------------------------------------------------->
       <!-- 2pm -->
-      <div class="main-container">
+      <article class="main-container">
         <section class="main-side-container">
           <label for="text-area">2 pm</label>
         </section>
-        <!-- TEXTAREA CONTAINER -->
+
         <section class="main-text-container">
           <textarea type="text" class="text-area"></textarea>
         </section>
 
-        <!-- SAVE CONTAINER -->
         <section class="main-side-container">
           <button class="item-save"><ion-icon name="save-outline" class="icon-big"></ion-icon></button>
         </section>
-      </div>
-      <!-- --------------------------------------------------------------- -->
-      <!-- --------------------------------------------------------------- -->
+      </article>
+      <!------------------------------------------------------------------->
+      <!------------------------------------------------------------------->
       <!-- 3pm -->
-      <div class="main-container">
+      <article class="main-container">
         <section class="main-side-container">
           <label for="text-area">3 pm</label>
         </section>
-        <!-- TEXTAREA CONTAINER -->
+
         <section class="main-text-container">
           <textarea type="text" class="text-area"></textarea>
         </section>
 
-        <!-- SAVE CONTAINER -->
         <section class="main-side-container">
           <button class="item-save"><ion-icon name="save-outline" class="icon-big"></ion-icon></button>
         </section>
-      </div>
-      <!-- --------------------------------------------------------------- -->
-      <!-- --------------------------------------------------------------- -->
+      </article>
+      <!------------------------------------------------------------------->
+      <!------------------------------------------------------------------->
       <!-- 4pm -->
-      <div class="main-container">
+      <article class="main-container">
         <section class="main-side-container">
           <label for="text-area">4 pm</label>
         </section>
-        <!-- TEXTAREA CONTAINER -->
+
         <section class="main-text-container">
           <textarea type="text" class="text-area"></textarea>
         </section>
 
-        <!-- SAVE CONTAINER -->
         <section class="main-side-container">
           <button class="item-save"><ion-icon name="save-outline" class="icon-big"></ion-icon></button>
         </section>
-      </div>
-      <!-- --------------------------------------------------------------- -->
-      <!-- --------------------------------------------------------------- -->
+      </article>
+      <!------------------------------------------------------------------->
+      <!------------------------------------------------------------------->
       <!-- 5pm -->
-      <div class="main-container">
+      <article class="main-container">
         <section class="main-side-container">
           <label for="text-area">5 pm</label>
         </section>
-        <!-- TEXTAREA CONTAINER -->
+
         <section class="main-text-container">
           <textarea type="text" class="text-area"></textarea>
         </section>
 
-        <!-- SAVE CONTAINER -->
         <section class="main-side-container">
           <button class="item-save"><ion-icon name="save-outline" class="icon-big"></ion-icon></button>
         </section>
-      </div>
-      <!-- --------------------------------------------------------------- -->
+      </article>
+      <!------------------------------------------------------------------->
     </main>
-
-    <!-- --------------------------------------------------------------- -->
-    <!-- FOOTER -->
-    <!-- --------------------------------------------------------------- -->
-    <footer>
-      <q class="quoteText"></q>
-      <h3 class="quoteAuthor"></h3>
-    </footer>
-
     <!--------------------------------------------------------------->
     <!-- SCRIPTS -->
     <!--------------------------------------------------------------->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.1/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule="" src="https://unpkg.com/ionicons@5.5.1/dist/ionicons/ionicons.js"></script>
-    <script src="./assets/js/workday.js"></script>
     <script src="./assets/js/script.js"></script>
   </body>
 </html>
