--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
       <!-- 9am -->
       <article class="main-container">
         <section class="main-side-container">
-          <label for="text-area">9 am</label>
+          <label>9 am</label>
         </section>
 
         <section class="main-text-container">
-          <textarea type="text" class="text-area"></textarea>
+          <textarea class="text-area"></textarea>
         </section>
 
         <section class="main-side-container">
-          <button class="item-save"><ion-icon name="save-outline" class="icon-big"></ion-icon></button>
+          <button><ion-icon name="save-outline" class="icon-big"></ion-icon></button>
         </section>
       </article>
       <!------------------------------------------------------------------->
@@ -39,15 +39,15 @@
       <!-- 10am -->
       <article class="main-container">
         <section class="main-side-container">
-          <label for="text-area">10 am</label>
+          <label>10 am</label>
         </section>
 
         <section class="main-text-container">
-          <textarea type="text" class="text-area"></textarea>
+          <textarea class="text-area"></textarea>
         </section>
 
         <section class="main-side-container">
-          <button class="item-save"><ion-icon name="save-outline" class="icon-big"></ion-icon></button>
+          <button><ion-icon name="save-outline" class="icon-big"></ion-icon></button>
         </section>
       </article>
       <!------------------------------------------------------------------->
@@ -55,15 +55,15 @@
       <!-- 11am -->
       <article class="main-container">
         <section class="main-side-container">
-          <label for="text-area">11 am</label>
+          <label>11 am</label>
         </section>
 
         <section class="main-text-container">
-          <textarea type="text" class="text-area"></textarea>
+          <textarea class="text-area"></textarea>
         </section>
 
         <section class="main-side-container">
-          <button class="item-save"><ion-icon name="save-outline" class="icon-big"></ion-icon></button>
+          <button><ion-icon name="save-outline" class="icon-big"></ion-icon></button>
         </section>
       </article>
       <!------------------------------------------------------------------->
@@ -71,15 +71,15 @@
       <!-- 12pm -->
       <article class="main-container">
         <section class="main-side-container">
-          <label for="text-area">12 pm</label>
+          <label>12 pm</label>
         </section>
 
         <section class="main-text-container">
-          <textarea type="text" class="text-area"></textarea>
+          <textarea class="text-area"></textarea>
         </section>
 
         <section class="main-side-container">
-          <button class="item-save"><ion-icon name="save-outline" class="icon-big"></ion-icon></button>
+          <button><ion-icon name="save-outline" class="icon-big"></ion-icon></button>
         </section>
       </article>
       <!------------------------------------------------------------------->
@@ -87,15 +87,15 @@
       <!-- 1pm -->
       <article class="main-container">
         <section class="main-side-container">
-          <label for="text-area">1 pm</label>
+          <label>1 pm</label>
         </section>
 
         <section class="main-text-container">
-          <textarea type="text" class="text-area"></textarea>
+          <textarea class="text-area"></textarea>
         </section>
 
         <section class="main-side-container">
-          <button class="item-save"><ion-icon name="save-outline" class="icon-big"></ion-icon></button>
+          <button><ion-icon name="save-outline" class="icon-big"></ion-icon></button>
         </section>
       </article>
       <!------------------------------------------------------------------->
@@ -103,15 +103,15 @@
       <!-- 2pm -->
       <article class="main-container">
         <section class="main-side-container">
-          <label for="text-area">2 pm</label>
+          <label>2 pm</label>
         </section>
 
         <section class="main-text-container">
-          <textarea type="text" class="text-area"></textarea>
+          <textarea class="text-area"></textarea>
         </section>
 
         <section class="main-side-container">
-          <button class="item-save"><ion-icon name="save-outline" class="icon-big"></ion-icon></button>
+          <button><ion-icon name="save-outline" class="icon-big"></ion-icon></button>
         </section>
       </article>
       <!------------------------------------------------------------------->
@@ -119,15 +119,15 @@
       <!-- 3pm -->
       <article class="main-container">
         <section class="main-side-container">
-          <label for="text-area">3 pm</label>
+          <label>3 pm</label>
         </section>
 
         <section class="main-text-container">
-          <textarea type="text" class="text-area"></textarea>
+          <textarea class="text-area"></textarea>
         </section>
 
         <section class="main-side-container">
-          <button class="item-save"><ion-icon name="save-outline" class="icon-big"></ion-icon></button>
+          <button><ion-icon name="save-outline" class="icon-big"></ion-icon></button>
         </section>
       </article>
       <!------------------------------------------------------------------->
@@ -135,15 +135,15 @@
       <!-- 4pm -->
       <article class="main-container">
         <section class="main-side-container">
-          <label for="text-area">4 pm</label>
+          <label>4 pm</label>
         </section>
 
         <section class="main-text-container">
-          <textarea type="text" class="text-area"></textarea>
+          <textarea class="text-area"></textarea>
         </section>
 
         <section class="main-side-container">
-          <button class="item-save"><ion-icon name="save-outline" class="icon-big"></ion-icon></button>
+          <button><ion-icon name="save-outline" class="icon-big"></ion-icon></button>
         </section>
       </article>
       <!------------------------------------------------------------------->
@@ -151,15 +151,15 @@
       <!-- 5pm -->
       <article class="main-container">
         <section class="main-side-container">
-          <label for="text-area">5 pm</label>
+          <label>5 pm</label>
         </section>
 
         <section class="main-text-container">
-          <textarea type="text" class="text-area"></textarea>
+          <textarea class="text-area"></textarea>
         </section>
 
         <section class="main-side-container">
-          <button class="item-save"><ion-icon name="save-outline" class="icon-big"></ion-icon></button>
+          <button><ion-icon name="save-outline" class="icon-big"></ion-icon></button>
         </section>
       </article>
       <!------------------------------------------------------------------->
